# postgres

./: README.md  build.sh  init.sql  run.sh  set_env
api_anuff/: pyproject.toml
api_anuff/api_anuff/: .gitignore  app.py  database.py  models.py  requirements.txt  schemas.py
api_anuff/api_anuff/routers/: anuncios.py  avaliacoes.py  chats.py  login.py  mensagens.py  usuarios.py
api_anuff/tests/: test_anuncio.py  test_avaliacao.py  test_chat.py  test_login.py  test_mensagem.py  test_usuario.py
