[tool.poetry]
name = "api-anuff"
version = "0.1.0"
description = ""
authors = ["Arthur Simões Ferreira <asferreira@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
